fix: make circuit cutter tile Java 8 compatible